--- a/spa-react-netcore-redis/voting/voting/ClientApp/package.json
+++ b/spa-react-netcore-redis/voting/voting/ClientApp/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass-chokidar": "^1.3.2",
     "bootstrap": "^3.3.7",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
+    "bootstrap-sass": "^3.3.7",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
@@ -13,8 +15,9 @@
     "rimraf": "^2.6.2"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar --include-path ./src/styles --include-path ./node_modules src/styles/ -o src/styles/",
     "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
