--- a/spa-react-netcore-redis/voting/voting/ClientApp/package.json
+++ b/spa-react-netcore-redis/voting/voting/ClientApp/package.json
@@ -3,15 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass-chokidar": "^1.3.2",
     "bootstrap": "^3.3.7",
+    "bootstrap-sass": "^3.3.7",
+    "node-sass-chokidar": "^1.3.2",
+    "redis": "^2.8.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.5",
-    "bootstrap-sass": "^3.3.7",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^1.1.5",
     "rimraf": "^2.6.2"
   },
   "scripts": {
