--- a/spa-react-netcore-redis/voting/docker-compose.yml
+++ b/spa-react-netcore-redis/voting/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3.4'
 
 services:
   voting:
-    image: ${DOCKER_REGISTRY}voting
     build:
       context: .
       dockerfile: voting/Dockerfile
@@ -14,7 +13,10 @@ services:
       - '80:80'
   redis:
     image: "redis:3.2-alpine"
+    ports:
+      - '6379:6379'
     volumes:
       - redis_data:/data
 volumes:
   redis_data:
+    driver: "local"
