Add mountable servicesettings.json file that can be mounted, at runtime, end users can override the path, and mounth their json file to that path.

--- a/spa-react-netcore-redis/voting/docker-compose.yml
+++ b/spa-react-netcore-redis/voting/docker-compose.yml
@@ -9,10 +9,12 @@ services:
       - redis
     environment:
       - REDIS_HOST=redis
+      - REDIS_PORT=6379
     ports: 
       - '80:80'
   redis:
     image: "redis:3.2-alpine"
+    command: ["redis-server", "--appendonly", "yes"]
     ports:
       - '6379:6379'
     volumes:
