--- a/spa-react-netcore-redis/voting/docker-compose.jm.yml
+++ b/spa-react-netcore-redis/voting/docker-compose.jm.yml
@@ -9,10 +9,13 @@ services:
       - redis
     environment:
       - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - SERVICE_SETTINGS_PATH=servicesettings_alt.json
     ports: 
       - '8000:80'
   redis:
     image: "redis:3.2-alpine"
+    command: ["redis-server", "--appendonly", "yes"]
     ports:
       - '6379:6379'
     volumes:
