Alt compose changes.

--- a/spa-react-netcore-redis/voting/docker-compose.alt.yml
+++ b/spa-react-netcore-redis/voting/docker-compose.alt.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-      - SERVICE_SETTINGS_PATH=servicesettings_alt.json
+     # - SERVICE_SETTINGS_PATH=servicesettings_alt.json
     ports: 
       - '8000:80'
   redis:
