--- a/spa-react-netcore-redis/voting/voting/Jenkinsfile
+++ b/spa-react-netcore-redis/voting/voting/Jenkinsfile
@@ -25,6 +25,7 @@ podTemplate(label: 'io',
         stage('\u27A1 Build Image') {
           checkout scm
           dir("spa-react-netcore-redis/voting/voting") {
+            sh "docker version"
             sh "docker build -t ${docker_repo}:latest -f Dockerfile ../"
           }
         }
