--- a/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/redis-gke-statefulset.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/redis-gke-statefulset.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.gke.enabled }}
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -38,3 +39,4 @@ spec:
       resources:
         requests:
           storage: 1Gi
+{{ end }}
