--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,8 @@ steps:
   displayName: 'Run a one-line script again'
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script again'
+    docker build -t redaptcloud/favorite-beer:$BUILD_TAG -f Dockerfile ../
+  displayName: 'Run a docker build.'
+  workingDirectory: "spa-react-netcore-redis/voting/voting"
+  env:
+    BUILD_TAG: $(Build.SourceVersion)
