--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,18 @@ jobs:
 
   steps:
 
+  - task: Docker@2
+    displayName: Build and push an image to container registry
+    inputs:
+      command: buildAndPush
+      repository: "favorite-beer"
+      dockerfile: "spa-react-netcore-redis/voting/voting/Dockerfile"
+      containerRegistry: redaptdemo
+      buildContext: spa-react-netcore-redis/voting
+      tags: |
+        $(Build.SourceVersion)
+        latest
+
   # - script: |
   #     docker build -t $ACR_NAME.azurecr.io/favorite-beer:$BUILD_TAG -f Dockerfile ../
   #   name: "DockerBuild"
@@ -32,7 +44,6 @@ jobs:
   #   enabled: true
   #   timeoutInMinutes: 15
   #   failOnStderr: false
-
 
   # - script: |
   #     az login --service-principal --tenant $ARM_TENANT_ID -u $ARM_CLIENT_ID -p $ARM_CLIENT_SECRET
@@ -50,17 +61,17 @@ jobs:
   #     ARM_CLIENT_SECRET: $(arm-client-secret)
   #     ACR_NAME: $(variable_acr_name)
 
-  - task: Docker@2
-    displayName: Build and push an image to container registry
-    inputs:
-      command: buildAndPush
-      repository: "favorite-beer"
-      dockerfile: "spa-react-netcore-redis/voting/voting/Dockerfile"
-      containerRegistry: redaptdemo
-      buildContext: spa-react-netcore-redis/voting
-      tags: |
-        $(Build.SourceVersion)
-        latest
+
+  - script: |
+      az login --service-principal --tenant $ARM_TENANT_ID -u $ARM_CLIENT_ID -p $ARM_CLIENT_SECRET
+    name: "DockerPush"
+    displayName: 'Connect to ACR for the helm operations.'
+    workingDirectory: "spa-react-netcore-redis/voting/voting"
+    env:
+      ARM_TENANT_ID: $(ext_variable_arm_tenant_id)
+      ARM_CLIENT_ID: $(ext_variable_arm_client_id)
+      ARM_CLIENT_SECRET: $(arm-client-secret)
+
 
   # https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/tool/helm-installer?view=azure-devops
   - task: HelmInstaller@0
