--- a/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
+++ b/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
@@ -2,4 +2,4 @@ steps:
   - name: gcr.io/kaniko-project/executor:latest
     args: ["--dockerfile=voting/Dockerfile",
            "--context=dir:spa-react-netcore-redis/voting",
-           "--destination=$DESTINATION"]
+           "--destination=$TAG_NAME"]
