jenkins-cloudbuild.yaml updated

--- a/spa-react-netcore-redis/voting/voting/Dockerfile
+++ b/spa-react-netcore-redis/voting/voting/Dockerfile
@@ -9,7 +9,7 @@ RUN curl --silent  --location https://deb.nodesource.com/setup_10.x |  bash -
 RUN apt-get install --yes nodejs
 RUN apt-get install --yes build-essential
 WORKDIR /src
-COPY voting.csproj voting/
+COPY voting/voting.csproj voting/
 RUN dotnet restore voting/voting.csproj
 COPY . .
 WORKDIR /src/voting
