--- a/spa-react-netcore-redis/voting/voting/Dockerfile
+++ b/spa-react-netcore-redis/voting/voting/Dockerfile
@@ -9,10 +9,14 @@ RUN curl --silent  --location https://deb.nodesource.com/setup_10.x |  bash -
 RUN apt-get install --yes nodejs
 RUN apt-get install --yes build-essential
 WORKDIR /src
-# COPY voting/voting.csproj voting/
+
+RUN pwd
+RUN ls -l
+
+COPY voting/voting.csproj voting/
 RUN dotnet restore voting/voting.csproj
 COPY . .
-# WORKDIR /src/voting
+WORKDIR /src/voting
 RUN dotnet build voting.csproj -c Release -o /app
 
 FROM build AS publish
