--- a/spa-react-netcore-redis/voting/voting/Dockerfile
+++ b/spa-react-netcore-redis/voting/voting/Dockerfile
@@ -9,11 +9,7 @@ RUN curl --silent  --location https://deb.nodesource.com/setup_10.x |  bash -
 RUN apt-get install --yes nodejs
 RUN apt-get install --yes build-essential
 WORKDIR /src
-
-RUN pwd
-RUN ls -l
-
-COPY voting/voting.csproj voting/
+COPY voting.csproj /
 RUN dotnet restore voting/voting.csproj
 COPY . .
 WORKDIR /src/voting
