--- a/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
+++ b/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
   - name: gcr.io/kaniko-project/executor:latest
-    args: ["--dockerfile=./voting/Dockerfile",
-           "--context=dir:spa-react-netcore-redis/voting",
+    args: ["--dockerfile=voting/Dockerfile",
+           "--context=dir:voting",
            "--destination=$TAG_NAME"]
