--- a/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
+++ b/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
@@ -3,4 +3,5 @@ steps:
     args: ["--dockerfile=voting/Dockerfile",
            "--destination=$TAG_NAME",
            "--cache=true",
-           "--cache-dir=/cache"]
+           "--cache-dir=/cache",
+           "--single-snapshot"]
