Testing changes that invalidate cache.

--- a/spa-react-netcore-redis/voting/voting/Dockerfile
+++ b/spa-react-netcore-redis/voting/voting/Dockerfile
@@ -4,10 +4,9 @@ EXPOSE 80
 
 FROM microsoft/dotnet:2.1-sdk AS build
 # Install Node.js
-RUN apt-get install --yes curl
+RUN apt-get install --yes curl 
 RUN curl --silent  --location https://deb.nodesource.com/setup_10.x |  bash -
-RUN apt-get install --yes nodejs
-RUN apt-get install --yes build-essential
+RUN apt-get install --yes nodejs build-essential
 WORKDIR /src
 COPY voting/voting.csproj voting/
 RUN dotnet restore voting/voting.csproj
