Updates to make chart more cross cloud.

--- a/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/redis-statefulset.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/Chart/templates/redis-statefulset.yaml
@@ -36,7 +36,7 @@ spec:
   - metadata:
       name: redis-data
     spec:
-      storageClassName: managed-premium
+      storageClassName: {{ .Values.redis.storageClassName }}
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
