--- a/spa-react-netcore-redis/voting/voting/k8s/gcr-values.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/gcr-values.yaml
@@ -17,7 +17,7 @@ ports:
 servicesettings: |-
   {
     "ServiceSettings": {
-      "Beers": ["Great Divide", "Epic", "Resolute"]
+      "Beers": ["Great Divide", "Epic", "Resolute", "Fourth Beer"]
     }
   }
 
