Update cloud build remove cache.

--- a/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
+++ b/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
@@ -2,6 +2,6 @@ steps:
   - name: gcr.io/kaniko-project/executor:latest
     args: ["--dockerfile=voting/Dockerfile",
            "--destination=$TAG_NAME",
-           "--cache=true",
+           "--cache=false",
            "--cache-dir=/cache",
            "--single-snapshot"]
