Bring cache back in, but remove snapshot preference.

--- a/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
+++ b/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
@@ -2,6 +2,5 @@ steps:
   - name: gcr.io/kaniko-project/executor:latest
     args: ["--dockerfile=voting/Dockerfile",
            "--destination=$TAG_NAME",
-           "--cache=false",
-           "--cache-dir=/cache",
-           "--single-snapshot"]
+           "--cache=true",
+           "--cache-dir=/cache"]
