Bring cache back in, but remove snapshot preference.

--- a/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
+++ b/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
@@ -3,4 +3,4 @@ steps:
     args: ["--dockerfile=voting/Dockerfile",
            "--destination=$TAG_NAME",
            "--cache=true",
-           "--cache-dir=/cache"]
+           "--cache-dir=/cache2"]
