--- a/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
+++ b/spa-react-netcore-redis/voting/jenkins-cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  - name: gcr.io/kaniko-project/executor:0.16.0
+  - name: gcr.io/kaniko-project/executor:v0.15.0
     args: ["--dockerfile=voting/Dockerfile",
            "--destination=$TAG_NAME",
            "--cache=true",
