--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,11 @@ stages:
       vmImage: $(vmImageName)
     steps:
 
+    - task: HelmInstaller@1
+      displayName: Helm installer
+      inputs: 
+        helmVersionToInstall: 3.0.2
+
     - task: HelmDeploy@0
       displayName: Helm install
       inputs:
