Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,7 @@ stages:
         buildContext: $(buildContextPath)
         tags: |
           $(tag)
+          '$(Build.SourceBranchName)-latest'
 
 - stage: Deploy
   displayName: Deploy to Cluster
