--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          $version = [IO.File]::ReadAllText(".\VERSION")
+          $version = [IO.File]::ReadAllText("VERSION")
           Write-Output "##vso[task.setvariable variable=buildVersion]$version"
     - task: Docker@2
       displayName: Build and push an image to container registry
