--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,7 @@ variables:
 
 stages:
 - stage: Build
+  condition: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
   displayName: Build and push stage
   jobs:  
   - job: Build
@@ -55,6 +56,7 @@ stages:
           $(buildVersion)
 
 - stage: Deploy
+  condition: succeeded('Build')
   displayName: Deploy to Cluster
   jobs:  
   - job: Deploy
