--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,20 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
+  branches:
+    include:
+    - master
+    - feature/*
+    - releases/*
+    exclude:
+    - releases/old*
+
+pr:
+  autoCancel: true
+  branches:
+    include:
+    - master
+    - feature/*
 
 resources:
 - repo: self
@@ -29,7 +42,8 @@ variables:
 
 stages:
 - stage: Build
-  displayName: Build and push stage
+  condition: and(succeeded('Build'), eq(variables['Build.Reason'], 'PullRequest'), contains(variables['Build.SourceBranchName'], 'feature'))
+  displayName: Build and Push to Dev ACR
   jobs:  
   - job: Build
     displayName: Build
@@ -57,7 +71,7 @@ stages:
 
 - stage: Deploy
   condition: succeeded('Build')
-  displayName: Deploy to Cluster
+  displayName: Deploy to Dev Cluster
   jobs:  
   - job: Deploy
     displayName: Deploy
@@ -66,13 +80,11 @@ stages:
     steps:
 
     - task: HelmInstaller@1
-      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       displayName: Helm installer
       inputs: 
         helmVersionToInstall: 3.0.2
 
     - task: HelmDeploy@0
-      condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
       displayName: Deploy to Demo
       inputs:
         connectionType: Kubernetes Service Connection
