--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,18 +89,7 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: PowerShell@2
-      inputs:
-        targetType: 'inline'
-        script: |
-          $version = [IO.File]::ReadAllText("VERSION")
-          $versionParts = $version.TrimEnd("*-").Split(".")
-          $currentMajor = [Convert]::ToInt32($versionParts[0])
-          $currentMinor = [Convert]::ToInt32($versionParts[1])
-          $currentPatch = [Convert]::ToInt32($versionParts[2])
-          Write-Output "##vso[task.setvariable variable=buildVersionMajor]$currentMajor"
-          Write-Output "##vso[task.setvariable variable=buildVersionMinor]$currentMinor"
-          Write-Output "##vso[task.setvariable variable=buildVersionPatch]$currentPatch"
+    - template: azure-pipelines/getVersion.yml
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
@@ -123,6 +112,7 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - template: azure-pipelines/getVersion.yml
 
     - task: HelmInstaller@1
       displayName: Helm installer
