--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,33 +52,7 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
-    - task: PowerShell@2
-      inputs:
-        targetType: 'inline'
-        script: |
-          $version = [IO.File]::ReadAllText("VERSION")
-          Write-Output "##vso[task.setvariable variable=buildVersion]$version"
-          $versionParts = $currentVersion.TrimEnd("*-").Split(".")
-          $currentMajor = [Convert]::ToInt32($versionParts[0])
-          $currentMinor = [Convert]::ToInt32($versionParts[1])
-          $currentPatch = [Convert]::ToInt32($versionParts[2])
-          $currentPatch++
-          Write-Output "##vso[task.setvariable variable=buildVersionMajor]$currentMajor"
-          Write-Output "##vso[task.setvariable variable=buildVersionMinor]$currentMinor"
-          Write-Output "##vso[task.setvariable variable=buildVersionPatch]$currentPatch"
-
-    - task: PowerShell@2
-      inputs:
-        targetType: 'inline'
-        script: |
-          $version = [IO.File]::ReadAllText("VERSION")
-          git config --global user.email "system-azure-devops@redapt.com"
-          git config --global user.name "System"
-          git status
-          git add VERSION
-
-          git commit -m "[skip ci] Update version numbers for Build %version%"
-          git push origin master
+    - template: azure-pipelines/bumpVersion.yml
 
 - stage: Build
   condition: and(eq(variables['Build.Reason'], 'PullRequest'), contains(variables['System.PullRequest.SourceBranch'], 'feature'), eq(variables['System.PullRequest.TargetBranch'], 'master'))
