--- a/azure-pipelines/bumpVersion.yml
+++ b/azure-pipelines/bumpVersion.yml
@@ -8,6 +8,20 @@ steps:
       $currentMajor = [Convert]::ToInt32($versionParts[0])
       $currentMinor = [Convert]::ToInt32($versionParts[1])
       $currentPatch = [Convert]::ToInt32($versionParts[2])
+      $currentPatch++
       Write-Output "##vso[task.setvariable variable=buildVersionMajor]$currentMajor"
       Write-Output "##vso[task.setvariable variable=buildVersionMinor]$currentMinor"
       Write-Output "##vso[task.setvariable variable=buildVersionPatch]$currentPatch"
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      $version = [IO.File]::ReadAllText("VERSION")
+      git config --global user.email "system-azure-devops@redapt.com"
+      git config --global user.name "System"
+      git status
+      git add VERSION
+
+      git commit -m "[skip ci] Update version numbers for Build %version%"
+      git push origin master
