--- a/azure-pipelines/bumpVersion.yml
+++ b/azure-pipelines/bumpVersion.yml
@@ -3,6 +3,9 @@ steps:
   inputs:
     targetType: 'inline'
     script: |
+      git checkout -b master
+      git config --global user.email "system-azure-devops@redapt.com"
+      git config --global user.name "System"
       $version = [IO.File]::ReadAllText("VERSION")
       $versionParts = $version.TrimEnd("*-").Split(".")
       $currentMajor = [Convert]::ToInt32($versionParts[0])
@@ -12,16 +15,9 @@ steps:
       Write-Output "##vso[task.setvariable variable=buildVersionMajor]$currentMajor"
       Write-Output "##vso[task.setvariable variable=buildVersionMinor]$currentMinor"
       Write-Output "##vso[task.setvariable variable=buildVersionPatch]$currentPatch"
-
-- task: PowerShell@2
-  inputs:
-    targetType: 'inline'
-    script: |
-      $version = [IO.File]::ReadAllText("VERSION")
-      git config --global user.email "system-azure-devops@redapt.com"
-      git config --global user.name "System"
+      $version = "%currentMajor%.%currentMinor%.%currentPatch%"
+      Set-Content -Path VERSION -Value $version
       git status
       git add VERSION
-
       git commit -m "[skip ci] Update version numbers for Build %version%"
       git push origin master
