Simulated out of order commit.

--- a/spa-react-netcore-redis/voting/voting/k8s/Chart/values.yaml
+++ b/spa-react-netcore-redis/voting/voting/k8s/Chart/values.yaml
@@ -17,7 +17,7 @@ ports:
 servicesettings: |-
   {
     "ServiceSettings": {
-      "Beers": ["Test Beer 1", "Test Beer 2", "Test Beer 3", "Test Beer 4"]
+      "Beers": ["Test Beer 1", "Test Beer 2", "Test Beer 3", "Test Beer 4", "Test Beer 5"]
     }
   }
 
