--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,6 @@ variables:
   valueFilePath: '$(Build.SourcesDirectory)/spa-react-netcore-redis/voting/voting/k8s/Chart/values.yaml'
   aksServiceConnection: 'f93da705-ddd0-43c1-9b08-abeaf2e0546b'
   tag: '$(Build.BuildId)'
-  buildVersion: '0.0.0'
   buildVersionMajor: '0'
   buildVersionMinor: '0'
   buildVersionPatch: '0'
@@ -52,7 +51,35 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: Docker@2
+      displayName: Login to ACR
+      inputs:
+        command: login
+        containerRegistry: $(dockerRegistryServiceConnection)
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        env:
+          containerRegistry: $(containerRegistry)
+          imageRepository: $(imageRepository)
+        script: |
+          $version = [IO.File]::ReadAllText("VERSION")
+          docker pull $env:containerRegistry/$env:imageRepository:$version
+          docker tag $env:containerRegistry/$env:imageRepository:$version release-candidate
+
     - template: azure-pipelines/bumpVersion.yml
+
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        env:
+          containerRegistry: $(containerRegistry)
+          imageRepository: $(imageRepository)
+        script: |
+          $version = [IO.File]::ReadAllText("VERSION")
+          docker tag release-candidate $env:containerRegistry/$env:imageRepository:$version
+          docker push $env:containerRegistry/$env:imageRepository:$version
+
 
 - stage: Build
   condition: and(eq(variables['Build.Reason'], 'PullRequest'), contains(variables['System.PullRequest.SourceBranch'], 'feature'), eq(variables['System.PullRequest.TargetBranch'], 'master'))
@@ -75,7 +102,7 @@ stages:
         tags: |
           $(tag)
           $(latestTag)
-          $(buildVersionMajor).$(buildVersionMinor).$(buildVersionPatch)
+          $(buildVersionMajor).$(buildVersionMinor).$(buildVersionPatch)-rc
 
 - stage: Deploy
   condition: succeeded('Build')
@@ -99,7 +126,7 @@ stages:
         connectionType: Kubernetes Service Connection
         kubernetesServiceEndpoint: $(aksServiceConnection)
         command: upgrade
-        overrideValues: 'image.repository=$(containerRegistry)/$(imageRepository),image.tag=$(buildVersionMajor).$(buildVersionMinor).$(buildVersionPatch)'
+        overrideValues: 'image.repository=$(containerRegistry)/$(imageRepository),image.tag=$(buildVersionMajor).$(buildVersionMinor).$(buildVersionPatch)-rc'
         chartType: FilePath
         chartPath: $(helmChartPath)
         valueFile: $(valueFilePath)
