--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - checkout: self
     - task: Docker@2
       displayName: Login to ACR
       inputs:
