--- a/azure-pipelines/bumpVersion.yml
+++ b/azure-pipelines/bumpVersion.yml
@@ -21,5 +21,5 @@ steps:
       Set-Content -Path VERSION -Value $version
       git status
       git add VERSION
-      git commit -m "[skip ci] Update version numbers for Build " + $version
+      git commit -m "[skip ci] Update version numbers for Build $version"
       git push origin master
