--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,8 +50,21 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: Docker@2
+      displayName: Login to ACR
+      inputs:
+        command: login
+        containerRegistry: $(dockerRegistryServiceConnection)
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        workingDirectory: $(Build.SourcesDirectory)
+        script: |
+          $version = $env:buildVersionMajor + '.' + $env:buildVersionMinor + '.' + $env:buildVersionPatch + '-rc'
+          docker pull $env:containerRegistry/$env:imageRepository:$version
+          docker tag $env:containerRegistry/$env:imageRepository:$version-rc $env:containerRegistry/$env:imageRepository:$version
+          docker push $env:containerRegistry/$env:imageRepository:$version
     - template: azure-pipelines/bumpVersion.yml
-
 
 - stage: Build
   condition: and(eq(variables['Build.Reason'], 'PullRequest'), contains(variables['System.PullRequest.SourceBranch'], 'feature'), eq(variables['System.PullRequest.TargetBranch'], 'master'))
