--- a/azure-pipelines/getVersion.yml
+++ b/azure-pipelines/getVersion.yml
@@ -2,6 +2,7 @@ steps:
 - task: PowerShell@2
   inputs:
     targetType: 'inline'
+    workingDirectory: $(Build.SourcesDirectory)
     script: |
       $version = [IO.File]::ReadAllText("VERSION")
       $versionParts = $version.TrimEnd("*-").Split(".")
