--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,8 +60,8 @@ stages:
         targetType: 'inline'
         workingDirectory: $(Build.SourcesDirectory)
         script: |
-          $version = $env:buildVersionMajor + '.' + $env:buildVersionMinor + '.' + $env:buildVersionPatch + '-rc'
-          docker pull $env:containerRegistry/$env:imageRepository:$version
+          $version = [IO.File]::ReadAllText("VERSION")
+          docker pull $env:containerRegistry/$env:imageRepository:$version-rc
           docker tag $env:containerRegistry/$env:imageRepository:$version-rc $env:containerRegistry/$env:imageRepository:$version
           docker push $env:containerRegistry/$env:imageRepository:$version
     - template: azure-pipelines/bumpVersion.yml
