--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,13 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - checkout: self
+      persistCredentials: true
+    - task: Docker@2
+      displayName: Login to ACR
+      inputs:
+        command: login
+        containerRegistry: $(dockerRegistryServiceConnection)
     - task: PowerShell@2
       inputs:
         targetType: 'inline'
